--- a/app/src/main/res/layout/activity_hadits.xml
+++ b/app/src/main/res/layout/activity_hadits.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -40,10 +42,14 @@
                 style="@style/TextAppearance.App.TitleMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tasbih"
+                android:text="Hadits Arbain"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recyclerHadits"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:listitem="@layout/item_hadits"/>
 </LinearLayout>
