--- a/app/src/main/res/layout/activity_hadits.xml
+++ b/app/src/main/res/layout/activity_hadits.xml
@@ -51,5 +51,6 @@
     android:id="@+id/recyclerHadits"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
     tools:listitem="@layout/item_hadits"/>
 </LinearLayout>
