--- a/app/src/main/res/layout/activity_ayat.xml
+++ b/app/src/main/res/layout/activity_ayat.xml
@@ -1,82 +1,134 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
+    android:orientation="vertical"
     android:padding="1dp">
 
     <!-- HEADER: Info Surat -->
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:background="@color/white"
-
-        android:paddingBottom="16dp">
+        android:elevation="8dp"
+        app:cardBackgroundColor="@color/cardview_shadow_end_color">
 
         <LinearLayout
-            android:id="@+id/btnBback"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/border_menu"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingTop="36dp"
+            android:paddingBottom="16dp">
 
             <LinearLayout
-                android:layout_width="20dp"
-                android:layout_height="12dp"
-                android:background="@drawable/ic_arrow_back"
-                android:contentDescription="Back" />
+                android:id="@+id/btnBack"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/border_menu"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="20dp"
+                    android:layout_height="12dp"
+                    android:background="@drawable/ic_arrow_back"
+                    android:contentDescription="Back" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/namaSurat"
+                style="@style/TextAppearance.App.TitleMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Al-Fatihah"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
         </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/ornament_image"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ornamen" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:textAlignment="center"
-            android:orientation="vertical">
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="40dp"
+            android:paddingEnd="40dp">
 
-        <TextView
-            android:id="@+id/suratName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Surat Al-Fatihah"
-            style="@style/TextAppearance.App.HeadlineSmall"
-            android:textStyle="bold"
-            android:textColor="@color/black" />
+            <TextView
+                android:id="@+id/text_tempat_turun"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/kurale_reguler"
+                android:gravity="center_horizontal"
+                android:text="Kiri"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/suratInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="7 Ayat - Makkiyah"
-            android:textSize="14sp"
-            android:fontFamily="@font/kurale_reguler"
-            android:textColor="#565050"
-            android:layout_marginTop="4dp" />
+            <TextView
+                android:id="@+id/text_arti_surat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:fontFamily="@font/kurale_reguler"
+                android:gravity="center_horizontal"
+                android:text="Tengah"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
 
-        <!-- Garis pemisah -->
-        <View
-            android:layout_width="40dp"
-            android:layout_height="2dp"
-            android:layout_marginTop="8dp"
-            android:background="#2C3E50"/>
+            <TextView
+                android:id="@+id/text_jumlah_ayat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/kurale_reguler"
+                android:gravity="center_horizontal"
+                android:text="Kanan"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
+
         </LinearLayout>
-    </LinearLayout>
-
-    <!-- DAFTAR AYAT: RecyclerView -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewAyat"
+    </FrameLayout>
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ"
         android:background="@color/white"
-        tools:listitem="@layout/item_ayat" />
+        android:textColor="@color/black"
+        android:gravity="center_horizontal"
+        android:textSize="24sp"
+        android:fontFamily="@font/amiri"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewAyat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            tools:listitem="@layout/item_ayat" />
+    </ScrollView>
 </LinearLayout>
 
 
