--- a/app/src/main/res/layout/activity_isi_hadits.xml
+++ b/app/src/main/res/layout/activity_isi_hadits.xml
@@ -73,7 +73,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:padding="8dp">
@@ -91,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:layout_marginBottom="7dp"
-                    android:fontFamily="@font/kurale_reguler"
+                    android:fontFamily="@font/amiri"
                     android:text="الفاتحالفاتحالفاتحالفاتحالفاتحالفاتحالفاتح"
                     android:textColor="@color/black"
                     android:textSize="24sp" />
@@ -99,7 +98,7 @@
                 <TextView
                     android:id="@+id/artiHadits"
                     android:layout_width="match_parent"
-                    android:paddingBottom="16dp"
+                    android:paddingBottom="30dp"
                     android:paddingStart="4dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/kurale_reguler"
