--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -23,30 +24,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:scaleType="centerCrop"
+                android:background="@drawable/masjid_setengah"
                 android:gravity="bottom"
-                android:background="@drawable/masjid_setengah" >
+                android:scaleType="centerCrop">
 
                 <LinearLayout
                     android:id="@+id/btnTanya"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
-                    android:background="@drawable/border_tanya_ustadz"
-                    android:layout_margin="16dp" >
+                    android:layout_margin="16dp"
+                    android:background="@drawable/border_tanya_ustadz">
+
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
                         android:src="@drawable/ic_ustadz"
-                        app:tint="@color/black"
-                        android:layout_marginStart="20dp"/>
+                        app:tint="@color/black" />
+
                     <TextView
+                        style="@style/TextAppearance.App.BodyMedium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tanya Pak Ustadz"
                         android:layout_gravity="center"
-                        android:textColor="@color/black"
-                        style="@style/TextAppearance.App.BodyMedium"
-                        android:layout_marginStart="1dp"/>
+                        android:layout_marginStart="1dp"
+                        android:text="Tanya Pak Ustadz"
+                        android:textColor="@color/black" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -74,6 +77,7 @@
                             android:layout_height="48dp"
                             android:layout_marginStart="20dp"
                             android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="4dp"
                             android:background="@drawable/border_menu"
                             android:gravity="center"
                             android:orientation="vertical">
@@ -90,8 +94,8 @@
                             style="@style/TextAppearance.App.LabelMedium"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Al-Quran"
                             android:gravity="center_horizontal"
+                            android:text="Al-Quran"
                             android:textColor="@color/black" />
                     </LinearLayout>
 
@@ -106,6 +110,7 @@
                             android:layout_height="48dp"
                             android:layout_marginStart="20dp"
                             android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="4dp"
                             android:background="@drawable/border_menu"
                             android:gravity="center">
 
@@ -116,69 +121,75 @@
                                 android:background="@drawable/tasbih"
                                 android:contentDescription="icon location" />
                         </LinearLayout>
+
                         <TextView
                             style="@style/TextAppearance.App.LabelMedium"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Hadits Arba'in"
                             android:gravity="center_horizontal"
+                            android:text="Hadits Arba'in"
                             android:textColor="@color/black" />
                     </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                    <LinearLayout
-                        android:id="@+id/btnJadwal"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:background="@drawable/border_menu"
-                        android:gravity="center">
-
-                        <LinearLayout
-                            android:layout_width="37dp"
-                            android:layout_height="37dp"
-                            android:background="@drawable/schedule"
-                            android:contentDescription="icon location" />
-                    </LinearLayout>
-                    <TextView
-                        style="@style/TextAppearance.App.LabelMedium"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Sholat"
-                        android:gravity="center_horizontal"
-                        android:textColor="@color/black" />
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                    <LinearLayout
-                        android:id="@+id/btnKiblat"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:background="@drawable/border_menu"
-                        android:gravity="center"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:orientation="vertical">
 
                         <LinearLayout
-                            android:layout_width="60dp"
-                            android:layout_height="70dp"
-                            android:backgroundTint="#6DA5CB"
-                            android:background="@drawable/ic_kabah"
-                            android:contentDescription="icon kabah" />
-                    </LinearLayout>
+                            android:id="@+id/btnJadwal"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="4dp"
+                            android:background="@drawable/border_menu"
+                            android:gravity="center">
+
+                            <LinearLayout
+                                android:layout_width="37dp"
+                                android:layout_height="37dp"
+                                android:background="@drawable/schedule"
+                                android:contentDescription="icon location" />
+                        </LinearLayout>
+
                         <TextView
                             style="@style/TextAppearance.App.LabelMedium"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Doa-doa"
                             android:gravity="center_horizontal"
+                            android:text="Sholat"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:id="@+id/btnKiblat"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="4dp"
+                            android:background="@drawable/border_menu"
+                            android:gravity="center">
+
+                            <LinearLayout
+                                android:layout_width="37dp"
+                                android:layout_height="37dp"
+                                android:background="@drawable/schedule"
+                                android:contentDescription="icon location" />
+                        </LinearLayout>
+
+                        <TextView
+                            style="@style/TextAppearance.App.LabelMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:text="Doa-doa"
                             android:textColor="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
@@ -206,7 +217,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
-                android:text="Kegiatan Terdekat"
+                android:text="Doa-doa"
                 android:textColor="@color/black" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -216,7 +227,78 @@
                 android:layout_marginStart="8dp"
                 android:nestedScrollingEnabled="false"
                 android:orientation="vertical" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="24dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="4dp"
+                app:strokeColor="@android:color/transparent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="20dp">
+
+                    <TextView
+                        android:id="@+id/tvDoaJudul"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:fontFamily="@font/kurale_reguler"
+                        android:textColor="@color/black"
+                        tools:text="Doa Sebelum Tidur" />
+
+                    <TextView
+                        android:id="@+id/tvDoaArab"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="28sp"
+                        android:gravity="center_horizontal"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/amiri"
+                        android:lineSpacingExtra="8dp"
+                        android:layout_marginTop="8dp"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        tools:text="بِاسْمِكَ اللهُمَّ أَحْيَا وَأَمُوْتُ" />
+
+                    <TextView
+                        android:id="@+id/tvDoaIndo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/kurale_reguler"
+                        android:textColor="@android:color/darker_gray"
+                        android:lineSpacingExtra="4dp"
+                        android:layout_marginTop="16dp"
+                        android:paddingStart="8dp"
+                        android:paddingEnd="8dp"
+                        tools:text="Dengan menyebut nama-Mu, Ya Allah, aku hidup dan dengan menyebut nama-Mu aku mati." />
+
+                    <TextView
+                        android:id="@+id/tvDoaSource"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:textSize="12sp"
+                        android:fontFamily="@font/kurale_reguler"
+                        android:textColor="@android:color/darker_gray"
+                        android:textStyle="italic"
+                        android:layout_marginTop="20dp"
+                        tools:text="Sumber: harian" />
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
+
     </ScrollView>
 </LinearLayout>
 
