--- a/app/src/main/res/layout/item_ayat.xml
+++ b/app/src/main/res/layout/item_ayat.xml
@@ -39,7 +39,7 @@
             android:textSize="24sp"
             android:textColor="@color/black"
             android:layout_marginEnd="10dp"
-            android:fontFamily="@font/kurale_reguler"
+            android:fontFamily="@font/amiri"
             android:layout_marginBottom="7dp"
             android:text="الفاتحالفاتحالفاتحالفاتحالفاتحالفاتحالفاتح"/>
 
